--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "description": "",
   "dependencies": {
     "express": "^4.19.2",
-    "nodemon": "^3.1.3"
+    "inversify": "^6.0.2",
+    "mongoose": "^8.4.1",
+    "nodemon": "^3.1.3",
+    "reflect-metadata": "^0.2.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
